--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,6 +490,11 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+#acc {
+  max-width: 75%;
+  max-height: 75%;
+}
+
 .about .container {
   position: relative;
   z-index: 10;
@@ -550,6 +555,10 @@ section {
 @media (max-width: 768px) {
   .about {
     text-align: center;
+  }
+  #acc {
+    max-width: 40%;
+    max-height: 40%;
   }
 }
 
