--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,6 +719,27 @@ section {
   font-size: 14px;
 }
 
+.services .content .about-btn {
+  padding: 8px 30px 9px 30px;
+  color: #fff;
+  border-radius: 50px;
+  transition: 0.3s;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 13px;
+  display: inline-flex;
+  align-items: center;
+  border: 2px solid #e03a3c;
+}
+.services .content .about-btn i {
+  font-size: 16px;
+  padding-left: 5px;
+}
+.services .content .about-btn:hover {
+  background: #e35052;
+  background: #e03a3c;
+}
+
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
