--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #e03a3c;
+  color: #BF0073;
   text-decoration: none;
 }
 
@@ -27,6 +27,16 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
+#logo {
+  max-width: 20%;
+}
+
+@media screen and (max-width: 768px) {
+  #logo {
+    max-width: 60%;
+  }
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -37,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #e03a3c;
+  background: #BF0073;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -89,7 +99,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #111111;
 }
 #header .logo a span {
-  color: #e03a3c;
+  color: #BF0073;
 }
 #header .logo img {
   max-height: 40px;
@@ -100,7 +110,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 .get-started-btn {
   margin-left: 30px;
-  background: #e03a3c;
+  background: #BF0073;
   color: #fff;
   border-radius: 4px;
   padding: 8px 25px;
@@ -158,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .navbar .dropdown ul {
   display: block;
@@ -185,7 +195,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -270,7 +280,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #111111;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -296,7 +306,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -344,8 +354,8 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
-  background: #e03a3c;
-  border: 2px solid #e03a3c;
+  background: #BF0073;
+  border: 2px solid #BF0073;
 }
 #hero .btn-get-started:hover {
   background: transparent;
@@ -398,7 +408,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #e03a3c;
+  background: #BF0073;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -408,11 +418,11 @@ section {
 
 .section-bg {
   padding: 120px 0;
-  color: #fff;
+  color: darkslategrey;
 }
 .section-bg:before {
   content: "";
-  background: #1b1b1b;
+  background: #E3DDD5;
   position: absolute;
   bottom: 60px;
   top: 60px;
@@ -456,7 +466,7 @@ section {
 .breadcrumbs ol li + li::before {
   display: inline-block;
   padding-right: 10px;
-  color: #e03a3c;
+  color: #BF0073;
   content: "/";
 }
 
@@ -472,10 +482,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #e03a3c;
+  border: 1px solid #BF0073;
 }
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #e03a3c;
+  background-color: #BF0073;
 }
 .clients .swiper-slide img {
   opacity: 0.5;
@@ -512,7 +522,7 @@ section {
 }
 .about .content .about-btn {
   padding: 8px 30px 9px 30px;
-  color: #fff;
+  color: darkslategrey;
   border-radius: 50px;
   transition: 0.3s;
   text-transform: uppercase;
@@ -520,7 +530,7 @@ section {
   font-size: 13px;
   display: inline-flex;
   align-items: center;
-  border: 2px solid #e03a3c;
+  border: 2px solid #BF0073;
 }
 .about .content .about-btn i {
   font-size: 16px;
@@ -528,14 +538,14 @@ section {
 }
 .about .content .about-btn:hover {
   background: #e35052;
-  background: #e03a3c;
+  background: #BF0073;
 }
 .about .icon-boxes .icon-box {
   margin-top: 30px;
 }
 .about .icon-boxes .icon-box i {
   font-size: 40px;
-  color: #e03a3c;
+  color: #BF0073;
   margin-bottom: 10px;
 }
 .about .icon-boxes .icon-box h4 {
@@ -585,7 +595,7 @@ section {
   transform: translateX(-50%);
   font-size: 24px;
   background: #fff;
-  color: #e03a3c;
+  color: #BF0073;
   border-radius: 50px;
   border: 2px solid #fff;
   box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.1);
@@ -633,12 +643,12 @@ section {
   margin: 0;
 }
 .tabs .nav-link:hover {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .tabs .nav-link.active {
-  background: #e03a3c;
+  background: #BF0073;
   color: #fff;
-  border-color: #e03a3c;
+  border-color: #BF0073;
 }
 @media (max-width: 768px) {
   .tabs .nav-link i {
@@ -672,7 +682,7 @@ section {
 .tabs .tab-pane ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #e03a3c;
+  color: #BF0073;
 }
 .tabs .tab-pane p:last-child {
   margin-bottom: 0;
@@ -685,7 +695,7 @@ section {
   margin-bottom: 20px;
   padding: 30px;
   border-radius: 6px;
-  background: #252525;
+  background: rgba(0, 0, 0, 0.06);
   transition: 0.3s;
 }
 .services .icon-box:hover {
@@ -693,7 +703,7 @@ section {
 }
 .services .icon-box i {
   float: left;
-  color: #e03a3c;
+  color: #BF0073;
   font-size: 40px;
   line-height: 0;
 }
@@ -704,14 +714,14 @@ section {
   font-size: 18px;
 }
 .services .icon-box h4 a {
-  color: #fff;
+  color: rgb(66, 65, 65);
   transition: 0.3s;
 }
 .services .icon-box h4 a:hover {
   text-decoration: underline;
 }
 .services .icon-box .icon-box:hover h4 a {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .services .icon-box p {
   margin-left: 70px;
@@ -721,7 +731,7 @@ section {
 
 .services .content .about-btn {
   padding: 8px 30px 9px 30px;
-  color: #fff;
+  color: darkslategrey;
   border-radius: 50px;
   transition: 0.3s;
   text-transform: uppercase;
@@ -729,7 +739,7 @@ section {
   font-size: 13px;
   display: inline-flex;
   align-items: center;
-  border: 2px solid #e03a3c;
+  border: 2px solid #BF0073;
 }
 .services .content .about-btn i {
   font-size: 16px;
@@ -737,7 +747,7 @@ section {
 }
 .services .content .about-btn:hover {
   background: #e35052;
-  background: #e03a3c;
+  background: #BF0073;
 }
 
 /*--------------------------------------------------------------
@@ -767,7 +777,7 @@ section {
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #e03a3c;
+  background: #BF0073;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -864,10 +874,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #e03a3c;
+  border: 1px solid #BF0073;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #e03a3c;
+  background-color: #BF0073;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -962,10 +972,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #e03a3c;
+  border: 1px solid #BF0073;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #e03a3c;
+  background-color: #BF0073;
 }
 
 /*--------------------------------------------------------------
@@ -1012,7 +1022,7 @@ section {
   padding-bottom: 16px;
 }
 .pricing .box ul i {
-  color: #e03a3c;
+  color: #BF0073;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1041,18 +1051,18 @@ section {
   border-color: #fff;
 }
 .pricing .featured {
-  background: #e03a3c;
+  background: #BF0073;
 }
 
 /*--------------------------------------------------------------
 # Frequently Asked Questions
 --------------------------------------------------------------*/
 .faq {
-  background-color: #4b4949;
+  background-color: #E3DDD5;
 }
 
 .faq h2 {
-  color: white;
+  color: darkslategrey;
 }
 
 .faq .faq-list {
@@ -1060,14 +1070,14 @@ section {
   list-style: none;
 }
 .faq .faq-list li {
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid darkslategrey;
   margin-bottom: 20px;
   padding-bottom: 20px;
 }
 .faq .faq-list a {
   display: block;
   position: relative;
-  font-family: #e03a3c;
+  font-family: #BF0073;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1083,16 +1093,16 @@ section {
 .faq .faq-list p {
   margin-bottom: 0;
   padding: 10px 0 0 0;
-  color: white;
+  color: rgb(66, 65, 65);
 }
 .faq .faq-list .icon-show {
   display: none;
 }
 .faq .faq-list a.collapsed {
-  color: #f0f1f2;
+  color: rgb(66, 65, 65);
 }
 .faq .faq-list a.collapsed:hover {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .faq .faq-list a.collapsed .icon-show {
   display: inline-block;
@@ -1132,7 +1142,7 @@ section {
   border-radius: 50px;
   width: 36px;
   height: 36px;
-  background: #e03a3c;
+  background: #BF0073;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -1186,7 +1196,7 @@ section {
 }
 .contact .info-box i {
   font-size: 32px;
-  color: #e03a3c;
+  color: #BF0073;
   border-radius: 50%;
   padding: 8px;
   border: 2px dotted #f8d4d5;
@@ -1263,7 +1273,7 @@ section {
   padding: 12px 15px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #e03a3c;
+  background: #BF0073;
   border: 0;
   padding: 10px 32px;
   color: #fff;
@@ -1317,7 +1327,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-title a:hover {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .blog .entry .entry-meta {
   margin-bottom: 15px;
@@ -1354,7 +1364,7 @@ section {
 }
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #e03a3c;
+  background: #BF0073;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1409,7 +1419,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-footer a:hover {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .blog .entry .entry-footer .cats {
   list-style: none;
@@ -1496,7 +1506,7 @@ section {
   transition: 0.3s;
 }
 .blog .blog-comments .comment h5 a:hover {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .blog .blog-comments .comment h5 .reply {
   padding-left: 10px;
@@ -1577,7 +1587,7 @@ section {
   justify-content: center;
 }
 .blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #e03a3c;
+  background: #BF0073;
 }
 .blog .blog-pagination li.active a, .blog .blog-pagination li:hover a {
   color: #fff;
@@ -1620,7 +1630,7 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #e03a3c;
+  background: #BF0073;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1644,7 +1654,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .categories ul a:hover {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .blog .sidebar .categories ul a span {
   padding-left: 5px;
@@ -1668,7 +1678,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #e03a3c;
+  color: #BF0073;
 }
 .blog .sidebar .recent-posts time {
   display: block;
@@ -1698,8 +1708,8 @@ section {
 }
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #e03a3c;
-  background: #e03a3c;
+  border: 1px solid #BF0073;
+  background: #BF0073;
 }
 .blog .sidebar .tags ul a span {
   padding-left: 5px;
@@ -1717,7 +1727,7 @@ section {
 }
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #1b1b1b;
+  background: #E3DDD5;
 }
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
@@ -1728,7 +1738,7 @@ section {
   font-weight: 700;
 }
 #footer .footer-top .footer-contact h3 span {
-  color: #e03a3c;
+  color: #BF0073;
 }
 #footer .footer-top .footer-contact p {
   font-size: 14px;
@@ -1748,7 +1758,7 @@ section {
   display: block;
   width: 20px;
   height: 2px;
-  background: #e03a3c;
+  background: #BF0073;
   bottom: 0;
   left: 0;
 }
@@ -1815,7 +1825,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #e03a3c;
+  background: #BF0073;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1843,7 +1853,7 @@ section {
   transition: 0.3s;
 }
 #footer .social-links a:hover {
-  background: #e03a3c;
+  background: #BF0073;
   color: #fff;
   text-decoration: none;
 }
