--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,10 +315,23 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+.video-container{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  overflow: hidden;
+  z-index: 0;
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.4;
+}
+
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center no-repeat;
+  /**background: url("../img/hero-bg.jpg") top center no-repeat;**/
   background-size: cover;
   position: relative;
   padding-top: 82px;
