--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1156,6 +1156,11 @@ section {
   background: #BF0073;
   color: whitesmoke;
 }
+
+#newsletter{
+  text-align: center;
+  padding-top: 50px;
+}
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
@@ -1279,12 +1284,12 @@ section {
   font-size: 14px;
   margin-bottom: 0;
 }
-.contact .php-email-form {
+.contact .contact-form {
   box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
   padding: 30px;
   border-radius: 4px;
 }
-.contact .php-email-form .error-message {
+.contact .contact-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -1292,10 +1297,10 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.contact .php-email-form .error-message br + br {
+.contact .contact-form .error-message br + br {
   margin-top: 25px;
 }
-.contact .php-email-form .sent-message {
+.contact .contact-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -1303,13 +1308,13 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-.contact .php-email-form .loading {
+.contact .contact-form .loading {
   display: none;
   background: #fff;
   text-align: center;
   padding: 15px;
 }
-.contact .php-email-form .loading:before {
+.contact .contact-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -1321,24 +1326,24 @@ section {
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
 }
-.contact .php-email-form .form-group {
+.contact .contact-form .form-group {
   margin-bottom: 25px;
 }
-.contact .php-email-form input, .contact .php-email-form textarea {
+.contact .contact-form input, .contact .contact-form textarea {
   box-shadow: none;
   font-size: 14px;
   border-radius: 4px;
 }
-.contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
+.contact .contact-form input:focus, .contact .contact-form textarea:focus {
   border-color: #111111;
 }
-.contact .php-email-form input {
+.contact .contact-form input {
   padding: 10px 15px;
 }
-.contact .php-email-form textarea {
+.contact .contact-form textarea {
   padding: 12px 15px;
 }
-.contact .php-email-form button[type=submit] {
+.contact .contact-form button[type=submit] {
   background: #BF0073;
   border: 0;
   padding: 10px 32px;
@@ -1346,7 +1351,7 @@ section {
   transition: 0.4s;
   border-radius: 4px;
 }
-.contact .php-email-form button[type=submit]:hover {
+.contact .contact-form button[type=submit]:hover {
   background: #e35052;
 }
 @-webkit-keyframes animate-loading {
