--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,8 +514,20 @@ section {
 # About
 --------------------------------------------------------------*/
 #acc {
-  max-width: 75%;
-  max-height: 75%;
+  max-width: 80%;
+  max-height: 80%;
+  margin-left: 10%;
+}
+
+#ifc {
+  max-width: 80%;
+  max-height: 80%;
+  margin-left: 10%;
+}
+
+#acc_ifc {
+  max-width: 100%;
+  max-height: auto;
 }
 
 .about .container {
@@ -574,16 +586,25 @@ section {
   .about .content {
     padding-right: 0;
   }
+
 }
 @media (max-width: 768px) {
   .about {
     text-align: center;
   }
-  #acc {
-    max-width: 40%;
-    max-height: 40%;
+  #acc, #ifc{
+    max-width: 80%;
+    max-height: 80%;
   }
 }
+
+@media (min-width: 368px) and (max-width: 768px) {
+  #acc, #ifc {
+    max-width: 65%;
+    max-height: 65%;
+    margin-left: 20%;
+  }
+}  
 
 /*--------------------------------------------------------------
 # Counts
